<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_text"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/log_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/logout"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/setting_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/settings"
                    android:background="@drawable/grey_background"
                    android:padding="12dp"
                    android:layout_marginEnd="6dp" />
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/grey_background"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:ems="10"
                        android:hint="@string/search_food"
                        android:textColorHint="@color/blue_grey"
                        android:textColor="@color/blue_grey"
                        android:textSize="16sp"
                        android:layout_margin="4dp"
                        android:textAlignment="center"
                        android:background="@color/grey"
                        android:padding="8dp" />

                    <ImageView
                        android:id="@+id/search_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/search_icon"
                        android:padding="4dp" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/cart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/basket"
                    android:padding="12dp"
                    android:background="@drawable/grey_background"
                    android:layout_marginStart="6dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.333"
                    android:background="@drawable/grey_background"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/location"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"/>

                    <Spinner
                        android:id="@+id/location_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:background="@null"
                        android:layout_weight="1"/>
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.333"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/grey_background"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/time_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/time"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"/>

                    <Spinner
                        android:id="@+id/time_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:background="@null"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.333"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/grey_background"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dollar_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dollar"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"/>

                    <Spinner
                        android:id="@+id/price_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:background="@null"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/best_foods"
                    android:textColor="@color/blue_grey"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/view_all"
                    android:textAllCaps="true"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">
                
                <ProgressBar
                    android:id="@+id/best_food_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:progressBarStyle"
                    app:layout_constraintStart_toStartOf="@id/best_food_recycler_view"
                    app:layout_constraintEnd_toEndOf="@id/best_food_recycler_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/best_food_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="@string/choose_category"
                android:textColor="@color/blue_grey"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ProgressBar
                    android:id="@+id/category_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:progressBarStyle"
                    app:layout_constraintStart_toStartOf="@id/category_recycler_view"
                    app:layout_constraintEnd_toEndOf="@id/category_recycler_view"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
        


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>